[gd_scene load_steps=7 format=2]

[ext_resource path="res://Cenas/Camera2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Cenas/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cenas/Gerenciador_fase.tscn" type="PackedScene" id=3]
[ext_resource path="res://script/fase_prototipo.gd" type="Script" id=4]
[ext_resource path="res://Cenas/Enemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://Cenas/Bullet_big.tscn" type="PackedScene" id=6]

[node name="fase_prototipo" type="Node2D"]
script = ExtResource( 4 )

[node name="TimerEnemy" type="Timer" parent="."]
wait_time = 0.9
autostart = true

[node name="Enemy7" parent="." instance=ExtResource( 5 )]
position = Vector2( 1604, 480 )

[node name="Enemy" parent="." instance=ExtResource( 5 )]
position = Vector2( 996, 480 )
x = 996

[node name="Enemy3" parent="." instance=ExtResource( 5 )]
position = Vector2( 287, 480 )
x = 287

[node name="Gerenciador_fase" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 610, -281 )

[node name="Bullet_big" parent="." instance=ExtResource( 6 )]
position = Vector2( 1380, 400 )
x = 1380

[node name="TimerBullet_big" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Bullet_big2" parent="." instance=ExtResource( 6 )]
position = Vector2( 900, 400 )
x = 900

[node name="Bullet_big3" parent="." instance=ExtResource( 6 )]
position = Vector2( 420, 400 )
x = 420

[node name="Bullet_big4" parent="." instance=ExtResource( 6 )]
position = Vector2( -60, 400 )
x = -60

[node name="TimerFinal" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="Enemy4" parent="." instance=ExtResource( 5 )]
position = Vector2( 524, 480 )
x = 524

[node name="Enemy2" parent="." instance=ExtResource( 5 )]
position = Vector2( 772, 480 )
x = 772

[node name="Enemy6" parent="." instance=ExtResource( 5 )]
position = Vector2( 1405, 480 )
x = 1392

[node name="Enemy5" parent="." instance=ExtResource( 5 )]
position = Vector2( 1217, 480 )
x = 1217

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 489, 702 )

[node name="Camera2D" parent="Player" instance=ExtResource( 1 )]

[connection signal="timeout" from="TimerEnemy" to="." method="_on_TimerEnemy_timeout"]
[connection signal="timeout" from="TimerBullet_big" to="." method="_on_TimerBullet_big_timeout"]
[connection signal="timeout" from="TimerFinal" to="." method="_on_TimerFinal_timeout"]
